# viennats-dev

./: CMakeLists.txt  README.md  README_WASM.md
assets-wasm/: Maskwasm.vtk  Siliconwasm.vtk  parwasm.txt  parwasm_SF6_CH2F2.txt
assets-wasm/debug_example/: trench.txt  trench.vtk
assets-wasm/debug_example/results_8bit/: Hull_0.vtp  Hull_1.vtp  Interface_lvst_0_1.vtp  Interface_lvst_1_1.vtp
assets-wasm/example/: deposition3D.txt
ios_vtk_patch/vtk/Filters/General/: vtkTableBasedClipDataSet.cxx
js/: SimpleHTTPServer.py  bootstrap.js  callbacks.js  callbacks_angular.js  main.html  myhelpers.js  viennats.html  viennats.js  vtswasm.html  vtswasm_worker.html  vtswasm_worker_ddown.html  vtsworker.js
src/: viennats.cpp  viennats.h
viennats/: Geometry.h  Parameters.h  Process.h  Statistics.h  Time.h  calc.h
viennats/LSlib/: config.hpp  integration_schemes.hpp  kernel.hpp  levelset2surface.hpp  levelset2volume.hpp  math.hpp  misc.hpp  operations.hpp  output.hpp  surface2levelset.hpp  timeintegration.hpp  vector.hpp
wasm/: vtswasm.cpp  vtswasm.h  wasmvtk.h
